# AI-Interview-Agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  alembic.ini  app.py  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.dev.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  test_search.py
.github/workflows/: ci.yml  test.yml
agents/: __init__.py  base.py  evaluator.py  interviewer.py  knowledge_retriever.py  orchestrator.py  report_writer.py  resume_analyst.py
alembic/versions/: e391ca02688d_initial_schema.py
backend/: Dockerfile  limiter.py  main.py  session_store.py
backend/api/: auth.py  bookmarks.py  chat.py  interview.py  report.py  reports.py  resume.py  sessions.py
backend/db/: backend.py  database.py
backend/db/backends/: postgres.py  sqlite.py
core/: api_key.py  cache.py  chat_context.py  config.py  constants.py  ingest_knowledge.py  interview_engine.py  llm.py  llm_client.py  logging_config.py  memory.py  mock_llm.py  prompts.json  prompts.py  rag_engine.py  telemetry.py
data/: auto_kb.txt  llm_pro_knowledge.txt
db/: database.py
docs/adr/: README.md  adr-001-sse-vs-websocket.md  adr-002-langchain-abstraction.md  adr-003-sqlite-vs-postgres.md  adr-004-multi-agent-architecture.md  adr-005-shared-memory-bus.md  adr-006-nextjs-vs-streamlit.md
docs/superpowers/specs/: 2026-05-21-resume-keyword-driven-interview-design.md
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/e2e/: auth-flow.spec.ts  interview-flow.spec.ts  report-flow.spec.ts
frontend/public/: manifest.json  sw.js
frontend/scripts/: size-report.mjs
frontend/src/app/: components.css  global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
frontend/src/i18n/: en-US.json  index.tsx  (+1 more)
report/: report_generator.py
scripts/: backup.sh  gen-certs.ps1  gen-certs.sh  restore.sh
tests/: conftest.py  test_api_endpoints.py  test_chat_context.py  test_database.py  test_evaluator.py  test_interviewer.py  test_llm.py  test_memory.py  test_orchestrator_integration.py  test_resume_analyst.py
(+47 files in other folders)
